# difforbit

./: .gitignore  CLAUDE.md  README.md  TEST_CASES.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/skills/matrix-ui/: SKILL.md
.claude/skills/phase-tracker/: SKILL.md
.github/workflows/: ci.yml  release.yml
.phase-tracker/: state.json
docs/: PHASE7_PLAN.md
scripts/: build.sh  check.sh  clean.sh  dev.sh  setup.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: config.rs  engines.rs  github.rs  keychain.rs  mod.rs  review.rs  scheduler.rs
src-tauri/src/diff/: extractor.rs  mod.rs  parser.rs
src-tauri/src/models/: config.rs  engine.rs  mod.rs  pr.rs  review.rs
src/__tests__/: exportReview.test.ts  reviewStore.test.ts  setup.ts  themes.test.ts
src/components/config/: EngineSelector.tsx  ProfileEditor.tsx  RepoList.tsx  SchedulePicker.tsx
src/components/layout/: Sidebar.tsx  TrayPopover.tsx  WindowFrame.tsx
src/hooks/: useKeyboardShortcuts.ts  useScheduler.ts  useTauriEvents.ts  useTheme.ts  useToastState.ts
src/ipc/: config.ts  engines.ts  github.ts  index.ts  review.ts
src/pages/: Configuration.tsx  Dashboard.tsx  Profiles.tsx  ReportViewer.tsx  Reports.tsx
src/store/: configStore.ts  index.ts  reviewStore.ts
src/styles/: themes.ts  tokens.ts
src/types/: config.ts  engine.ts  pr.ts  review.ts
src/utils/: exportReview.ts
(+21 files in other folders)
